# cboy

./: CMakeLists.txt  README.md  controls.c  controls.h  cpu.c  cpu.h  display.c  display.h  gameboy.h  joystick.c  main.c  mbc.c  mbc.h  mmu.c  mmu.h
.github/workflows/: android.yml  linux.yml  macos.yml  switch.yml  windows.yml
anboy/: build.gradle  settings.gradle
anboy/anboy/: build.gradle
anboy/anboy/src/main/: AndroidManifest.xml
anboy/anboy/src/main/cpp/: CMakeLists.txt  controls.cpp  controls.h  display.cpp  display.h  main.cpp
anboy/anboy/src/main/java/io/github/tiefensuche/anboy/: MainActivity.kt
anboy/anboy/src/main/res/layout/: content_main.xml
anboy/anboy/src/main/res/values/: strings.xml
cboy/: CMakeLists.txt  framebuffer.c  joystick.c  joystick.h  keyboard.c  keyboard.h  main.c  opengl.c  renderer.h
instructions/: cb.c  opcodes.c  opcodes.h
libcboy/: CMakeLists.txt  controls.c  controls.h  cpu.c  cpu.h  display.c  display.h  gameboy.c  gameboy.h  mbc.c  mbc.h  mmu.c  mmu.h  timer.c  timer.h
libcboy/instructions/: cb.c  cb.h  instructions.c  instructions.h  opcodes.c  opcodes.h
nxboy/: CMakeLists.txt  main.c
nxboy/cmake/: FindLIBNX.cmake  devkita64-libnx.cmake  nx-utils.cmake  utils.cmake
tests/: CMakeLists.txt  main.c
